--- a/index.html
+++ b/index.html
@@ -10,6 +10,40 @@
   </head>
   <body>
     <h1>Olá, mundo!</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <h2 class="text-center text-dark mt-5">fa&ccedil; a seu login</h2>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(Página atual)</span></a>
+          <a class="nav-item nav-link" href="#">Destaques</a>
+          <a class="nav-item nav-link" href="#">Preços</a>
+          <a class="nav-item nav-link disabled" href="#">Desativado</a>
+        </div>
+      </div>
+    </nav>
+    Você também pode usar dropdowns em seu nav da navbar. Menus dropdown precisam de um elemento envolto para posicionamento, então, se assegure de usar elementos aninhados e separados para .nav-item e .nav-link, como mostrado abaixo.
+    
+    Navbar
+    Home(Página atual)
+    Destaques
+    Preços
+    Link dropdown 
+    ￼Copy
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse n
+
     <form class="needs-validation" novalidate>
       <div class="form-row">
         <div class="col-md-4 mb-3">
