--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
     <title>FORMULARIO</title>
   </head>
   <body>
-    <h1>Olá, mundo!</h1>
+    <h1>
     <div class="container">
       <div class="row">
         <div class="col-md-6 offset-md-3">
@@ -46,6 +45,19 @@
 
     <form class="needs-validation" novalidate>
       <div class="form-row">
+      </div>
+    </div>
+    <button class="btn btn-primary" type="submit">Enviar</button>
+    </h1>
+      <script> var validation = Array.prototype.filter.call(forms, function(form) {
+
+
+        form.addEventListener('submit', function(event) {
+          if (form.checkValidity() === false) {
+            event.preventDefault();
+            event.stopPropagation();
+          }
+      </script>
         <div class="col-md-4 mb-3">
           <label for="validationCustom01">Primeiro nome</label>
           <input type="text" class="form-control" id="validationCustom01" placeholder="Nome" value="Mark" required>
@@ -108,17 +120,9 @@
         </div>
       </div>
       <button class="btn btn-primary" type="submit">Enviar</button>
-    </form>
-    
-    <script>
-    // Exemplo de JavaScript inicial para desativar envios de formulário, se houver campos inválidos.
-    (function() {
-      'use strict';
-      window.addEventListener('load', function() {
-        // Pega todos os formulários que nós queremos aplicar estilos de validação Bootstrap personalizados.
-        var forms = document.getElementsByClassName('needs-validation');
-        // Faz um loop neles e evita o envio
+…   <script>     
         var validation = Array.prototype.filter.call(forms, function(form) {
+ 
           form.addEventListener('submit', function(event) {
             if (form.checkValidity() === false) {
               event.preventDefault();
@@ -130,8 +134,41 @@
       }, false);
     })();
     </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384
+  </div>
+</div>
+<button class="btn btn-primary" type="submit">Enviar</button>
+…        var validation = Array.prototype.filter.call(forms, function(form) {
+
+
+    form.addEventListener('submit', function(event) {
+      if (form.checkValidity() === false) {
+        event.preventDefault();
+        event.stopPropagation();
+      }-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.
+  </div>
+</div>
+<button class="btn btn-primary" type="submit">Enviar</button>
+…        var validation = Array.prototype.filter.call(forms, function(form) {
+
+</div>
+</div>
+<button class="btn btn-primary" type="submit">Enviar</button>
+…        var validation = Array.prototype.filter.call(forms, function(form) {
+
+
+    form.addEventListener('submit', function(event) {
+      if (form.checkValidity() === false) {
+        event.preventDefault();
+        event.stopPropagation();
+      }
+
+    form.addEventListener('submit', function(event) {
+      if (form.checkValidity() === false) {
+        event.preventDefault();
+        event.stopPropagation();
+      }min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
